EXCEL_AutoUpdate/forexlog2.log
  File "/home/spark/autocommit/EXCEL_AutoUpdate/MySQL_visualize_research_forex.py", line 39
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
  File "/home/spark/autocommit/EXCEL_AutoUpdate/MySQL_visualize_research_forex.py", line 39
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
==道瓊==
[1628438400000.0, 34998.0]
==標普500==
[1628438400000.0, 4425.75]
==那斯達克==
[1628438400000.0, 15125.25]
==台灣加權==
[1628524800000.0, 17323.64]
==歐元==
[1628438400000.0, 1.17485]
==日圓==
[1628438400000.0, 90695.0]
==英鎊==
[1628438400000.0, 1.3855]
==加幣==
[1628438400000.0, 0.7953]
==瑞郎==
[1628438400000.0, 1.0878]
==澳幣==
[1628438400000.0, 0.73365]
==輕原油==
[1628438400000.0, 66.48]
==天然氣==
[1628438400000.0, 4.06]
==無鉛汽油==
[1628438400000.0, 2.2348]
==熱燃油==
[1628438400000.0, 2.0421]
==金==
[1628438400000.0, 1726.5]
==銀==
[1628438400000.0, 23.269]
==銅==
[1628438400000.0, 4.2895]
==鉑==
[1628438400000.0, 970.9]
==鈀==
[1628438400000.0, 2602.1]
==黃豆==
[1628438400000.0, 1329.75]
==小麥==
[1628438400000.0, 711.25]
==玉米==
[1628438400000.0, 553.75]
==道瓊==
[1628524800000.0, 35155.0]
==標普500==
[1628524800000.0, 4430.0]
==那斯達克==
[1628524800000.0, 15044.5]
==台灣加權==
[1628611200000.0, 17227.18]
==歐元==
[1628524800000.0, 1.17295]
==日圓==
[1628524800000.0, 90455.0]
==英鎊==
[1628524800000.0, 1.3842]
==加幣==
[1628524800000.0, 0.79825]
==瑞郎==
[1628524800000.0, 1.0844]
==澳幣==
[1628524800000.0, 0.73505]
==輕原油==
[1628524800000.0, 68.29]
==天然氣==
[1628524800000.0, 4.089]
==無鉛汽油==
[1628524800000.0, 2.2679]
==熱燃油==
[1628524800000.0, 2.0802]
==金==
[1628524800000.0, 1731.7]
==銀==
[1628524800000.0, 23.392]
==銅==
[1628524800000.0, 4.354]
==鉑==
[1628524800000.0, 987.0]
==鈀==
[1628524800000.0, 2650.0]
==黃豆==
[1628524800000.0, 1336.75]
==小麥==
[1628524800000.0, 727.0]
==玉米==
[1628524800000.0, 553.25]
==道瓊==
[1628611200000.0, 35372.0]
==標普500==
[1628611200000.0, 4440.5]
==那斯達克==
[1628611200000.0, 15019.5]
==台灣加權==
[1628697600000.0, 17219.94]
==歐元==
[1628611200000.0, 1.17455]
==日圓==
[1628611200000.0, 90555.0]
==英鎊==
[1628611200000.0, 1.3866]
==加幣==
[1628611200000.0, 0.7994]
==瑞郎==
[1628611200000.0, 1.0856]
==澳幣==
[1628611200000.0, 0.7373]
==輕原油==
[1628611200000.0, 69.25]
==天然氣==
[1628611200000.0, 4.059]
==無鉛汽油==
[1628611200000.0, 2.3022]
==熱燃油==
[1628611200000.0, 2.1058]
==金==
[1628611200000.0, 1753.3]
==銀==
[1628611200000.0, 23.488]
==銅==
[1628611200000.0, 4.3675]
==鉑==
[1628611200000.0, 1015.6]
==鈀==
[1628611200000.0, 2632.8]
==黃豆==
[1628611200000.0, 1340.0]
==小麥==
[1628611200000.0, 727.0]
==玉米==
[1628611200000.0, 559.25]
Traceback (most recent call last):
  File "/home/spark/anaconda3/lib/python3.7/site-packages/pymysql/connections.py", line 583, in connect
    **kwargs)
  File "/home/spark/anaconda3/lib/python3.7/socket.py", line 728, in create_connection
    raise err
  File "/home/spark/anaconda3/lib/python3.7/socket.py", line 716, in create_connection
    sock.connect(sa)
ConnectionRefusedError: [Errno 111] Connection refused

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/spark/autocommit/EXCEL_AutoUpdate/MySQL_visualize_research_forex.py", line 26, in <module>
    charset='utf8',
  File "/home/spark/anaconda3/lib/python3.7/site-packages/pymysql/__init__.py", line 94, in Connect
    return Connection(*args, **kwargs)
  File "/home/spark/anaconda3/lib/python3.7/site-packages/pymysql/connections.py", line 325, in __init__
    self.connect()
  File "/home/spark/anaconda3/lib/python3.7/site-packages/pymysql/connections.py", line 630, in connect
    raise exc
pymysql.err.OperationalError: (2003, "Can't connect to MySQL server on '103.17.9.213' ([Errno 111] Connection refused)")
==道瓊==
[1628784000000.0, 35420.0]
==標普500==
[1628784000000.0, 4462.5]
==那斯達克==
[1628784000000.0, 15125.75]
==台灣加權==
[1629043200000.0, 16858.77]
==歐元==
[1628784000000.0, 1.18015]
==日圓==
[1628784000000.0, 91260.0]
==英鎊==
[1628784000000.0, 1.3869]
==加幣==
[1628784000000.0, 0.79885]
==瑞郎==
[1628784000000.0, 1.0934]
==澳幣==
[1628784000000.0, 0.7374]
==輕原油==
[1628784000000.0, 68.44]
==天然氣==
[1628784000000.0, 3.861]
==無鉛汽油==
[1628784000000.0, 2.1129]
==熱燃油==
[1628784000000.0, 2.0779]
==金==
[1628784000000.0, 1778.2]
==銀==
[1628784000000.0, 23.779]
==銅==
[1628784000000.0, 4.3915]
==鉑==
[1628784000000.0, 1026.0]
==鈀==
[1628784000000.0, 2656.5]
==黃豆==
[1628784000000.0, 1365.0]
==小麥==
[1628784000000.0, 762.25]
==玉米==
[1628784000000.0, 573.0]
==道瓊==
[1629043200000.0, 35534.0]
==標普500==
[1629043200000.0, 4474.0]
==那斯達克==
[1629043200000.0, 15134.0]
==台灣加權==
[1629129600000.0, 16661.36]
==歐元==
[1629043200000.0, 1.17815]
==日圓==
[1629043200000.0, 91565.0]
==英鎊==
[1629043200000.0, 1.3838]
==加幣==
[1629043200000.0, 0.79545]
==瑞郎==
[1629043200000.0, 1.0969]
==澳幣==
[1629043200000.0, 0.73365]
==輕原油==
[1629043200000.0, 67.29]
==天然氣==
[1629043200000.0, 3.946]
==無鉛汽油==
[1629043200000.0, 2.2009]
==熱燃油==
[1629043200000.0, 2.0483]
==金==
[1629043200000.0, 1789.8]
==銀==
[1629043200000.0, 23.791]
==銅==
[1629043200000.0, 4.327]
==鉑==
[1629043200000.0, 1021.1]
==鈀==
[1629043200000.0, 2598.0]
==黃豆==
[1629043200000.0, 1368.25]
==小麥==
[1629043200000.0, 760.5]
==玉米==
[1629043200000.0, 568.75]
==道瓊==
[1629129600000.0, 35259.0]
==標普500==
[1629129600000.0, 4443.5]
==那斯達克==
[1629129600000.0, 14997.5]
==台灣加權==
[1629216000000.0, 16826.27]
==歐元==
[1629129600000.0, 1.17165]
==日圓==
[1629129600000.0, 91285.0]
==英鎊==
[1629129600000.0, 1.3737]
==加幣==
[1629129600000.0, 0.79205]
==瑞郎==
[1629129600000.0, 1.0939]
==澳幣==
[1629129600000.0, 0.72525]
==輕原油==
[1629129600000.0, 66.59]
==天然氣==
[1629129600000.0, 3.837]
==無鉛汽油==
[1629129600000.0, 2.0397]
==熱燃油==
[1629129600000.0, 2.0361]
==金==
[1629129600000.0, 1787.8]
==銀==
[1629129600000.0, 23.659]
==銅==
[1629129600000.0, 4.206]
==鉑==
[1629129600000.0, 993.8]
==鈀==
[1629129600000.0, 2495.6]
==黃豆==
[1629129600000.0, 1361.5]
==小麥==
[1629129600000.0, 748.5]
==玉米==
[1629129600000.0, 563.5]
==道瓊==
[1629216000000.0, 34887.0]
==標普500==
[1629216000000.0, 4394.5]
==那斯達克==
[1629216000000.0, 14849.25]
==台灣加權==
[1629302400000.0, 16375.4]
==歐元==
[1629216000000.0, 1.1718]
==日圓==
[1629216000000.0, 91020.0]
==英鎊==
[1629216000000.0, 1.3763]
==加幣==
[1629216000000.0, 0.7916]
==瑞郎==
[1629216000000.0, 1.0917]
==澳幣==
[1629216000000.0, 0.7245]
==輕原油==
[1629216000000.0, 65.21]
==天然氣==
[1629216000000.0, 3.866]
==無鉛汽油==
[1629216000000.0, 2.0162]
==熱燃油==
[1629216000000.0, 2.0246]
==金==
[1629216000000.0, 1784.4]
==銀==
[1629216000000.0, 23.422]
==銅==
[1629216000000.0, 4.12]
==鉑==
[1629216000000.0, 996.4]
==鈀==
[1629216000000.0, 2423.3]
==黃豆==
[1629216000000.0, 1353.25]
==小麥==
[1629216000000.0, 751.25]
==玉米==
[1629216000000.0, 565.0]
==道瓊==
[1629302400000.0, 34818.0]
==標普500==
[1629302400000.0, 4401.5]
==那斯達克==
[1629302400000.0, 14928.0]
==台灣加權==
[1629388800000.0, 16341.94]
==歐元==
[1629302400000.0, 1.16805]
==日圓==
[1629302400000.0, 91095.0]
==英鎊==
[1629302400000.0, 1.3639]
==加幣==
[1629302400000.0, 0.77995]
==瑞郎==
[1629302400000.0, 1.0893]
==澳幣==
[1629302400000.0, 0.71505]
==輕原油==
[1629302400000.0, 63.5]
==天然氣==
[1629302400000.0, 3.844]
==無鉛汽油==
[1629302400000.0, 1.9525]
==熱燃油==
[1629302400000.0, 1.9714]
==金==
[1629302400000.0, 1783.1]
==銀==
[1629302400000.0, 23.23]
==銅==
[1629302400000.0, 4.041]
==鉑==
[1629302400000.0, 971.2]
==鈀==
[1629302400000.0, 2297.9]
==黃豆==
[1629302400000.0, 1320.0]
==小麥==
[1629302400000.0, 742.75]
==玉米==
[1629302400000.0, 550.75]
